--- a/html/recipe-cards.html
+++ b/html/recipe-cards.html
@@ -7,6 +7,17 @@
 </head>
 <body>
 
+<nav>
+    <ul class="categories">
+        <li><a href="#main_course" onclick="getRecipesByCategory('MAIN_COURSE')">main course</a></li>
+        <li><a href="#soup" onclick="getRecipesByCategory('SOUP')">soup</a></li>
+        <li><a href="#dessert" onclick="getRecipesByCategory('DESSERT')">dessert</a></li>
+        <li><a href="#drink" onclick="getRecipesByCategory('DRINK')">drink</a></li>
+        <li><a href="#salat" onclick="getRecipesByCategory('SALAD')">salat</a></li>
+        <li><a href="#pizza" onclick="getRecipesByCategory('PIZZA')">pizza</a></li>
+    </ul>
+</nav>
+
 <div class="cards-container">
     <div class="dishes-box" style="display: none;">
         <div class="dishes-image-container">
